src/snapshots/sqlc__test__delete_with_return.snap
---
source: src/test.rs
expression: rs
---
pub struct DeleteUserParams {
    pub eq_film_id: i32,
}
pub struct DeleteUserRows {
    pub film_id: i32,
    pub title: String,
}
pub async fn delete_user(
    c: &impl tokio_postgres::GenericClient,
    p: DeleteUserParams,
) -> Result<Vec<DeleteUserRows>, tokio_postgres::Error> {
    c.query(
            "DELETE FROM films WHERE film_id = $1 RETURNING film_id, title",
            &[&p.eq_film_id],
        )
        .await
        .map(|rs| {
            rs.into_iter()
                .map(|r| DeleteUserRows {
                    film_id: r.get(0),
                    title: r.get(1),
                })
                .collect()
        })
}
