src/snapshots/sqlc__test__with_multiple_inputs.snap
---
source: src/test.rs
expression: rs
---
pub struct FindFilmParams {
    pub gt_film_id: i32,
    pub like_title: String,
}
pub struct FindFilmRows {
    pub film_id: i32,
    pub title: String,
}
pub async fn find_film(
    c: &impl tokio_postgres::GenericClient,
    p: FindFilmParams,
) -> Result<Vec<FindFilmRows>, tokio_postgres::Error> {
    c.query(
            "SELECT film_id, title FROM films WHERE film_id > $1 AND title LIKE $2",
            &[&p.gt_film_id, &p.like_title],
        )
        .await
        .map(|rs| {
            rs.into_iter()
                .map(|r| FindFilmRows {
                    film_id: r.get(0),
                    title: r.get(1),
                })
                .collect()
        })
}
